--- a/Integration/styles/styles.scss
+++ b/Integration/styles/styles.scss
@@ -5,8 +5,8 @@
 // mixins
 @import './mixins/forsize';
 
-@import './conponent/homepage';
-@import './conponent/articles';
+@import './component/homepage';
+@import './component/articles';
 
 
 * {
