--- a/Integration/styles/styles.scss
+++ b/Integration/styles/styles.scss
@@ -14,12 +14,9 @@
 }
 
 html {
-  width: 100%;
-  font-size: 62.5%;
+  text-decoration: none;
 }
 
 body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  width: 100%;
-  font-size: 62.5%;
 }
