--- a/Integration/styles/view/articles.html
+++ b/Integration/styles/view/articles.html
@@ -39,15 +39,15 @@
       <div class="articles-stroke"></div>
     </div>
     <div class="articles-imgContainer">
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.svg" alt="img" class="articles-imgContent"></a>
-      <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.svg" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.png" alt="img" class="articles-imgContent"></a>
+      <a href="#" class="articles-imgLink"><img src="../img/sampleview.svg" alt="img" class="articles-imgContent"></a>
     </div>
   </div>
   <script src="../../index.js"></script>
