--- a/Integration/css/style.css
+++ b/Integration/css/style.css
@@ -101,6 +101,20 @@ table {
   background-color: #E3E3E3;
   margin-bottom: 18px;
 }
+@media (min-width: 600px) {
+  .articles-imgContainer {
+    margin: 0px 0 0 100px;
+  }
+}
+.--nophone {
+  display: none;
+}
+@media (min-width: 600px) {
+  .--nophone {
+    display: block;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
