--- a/Integration/css/style.css
+++ b/Integration/css/style.css
@@ -8,40 +8,32 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
 blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
+  content: '';
+  content: none; }
 
 q:before, q:after {
-  content: "";
-  content: none;
-}
+  content: '';
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
 .container-a {
   display: inline-block;
@@ -51,22 +43,19 @@ table {
   text-decoration: none;
   font-size: 35px;
   overflow: hidden;
-  top: 5px;
-}
-.container-a:after {
-  content: "";
-  position: absolute;
-  background: #000;
-  height: 2px;
-  width: 0%;
-  transform: translateX(-50%);
-  left: 50%;
-  bottom: 0;
-  transition: 0.35s ease;
-}
-.container-a:hover:after, .container-a:focus:after, .container-a:active:after {
-  width: 100%;
-}
+  top: 5px; }
+  .container-a:after {
+    content: '';
+    position: absolute;
+    background: #000;
+    height: 2px;
+    width: 0%;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    transition: .35s ease; }
+  .container-a:hover:after, .container-a:focus:after, .container-a:active:after {
+    width: 100%; }
 
 .button_container {
   position: fixed;
@@ -76,40 +65,32 @@ table {
   width: 35px;
   cursor: pointer;
   z-index: 100;
-  transition: opacity 0.25s ease;
-}
-.button_container:hover {
-  opacity: 0.7;
-}
-.button_container.active .top {
-  transform: translateY(11px) translateX(0) rotate(45deg);
-  background: #000;
-}
-.button_container.active .middle {
-  opacity: 0;
-  background: #000;
-}
-.button_container.active .bottom {
-  transform: translateY(-11px) translateX(0) rotate(-45deg);
-  background: #000;
-}
-.button_container .--pos {
-  background: #000;
-  border: none;
-  height: 5px;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 0.35s ease;
-  cursor: pointer;
-}
-.button_container .--pos:nth-of-type(2) {
-  top: 11px;
-}
-.button_container .--pos:nth-of-type(3) {
-  top: 22px;
-}
+  transition: opacity .25s ease; }
+  .button_container:hover {
+    opacity: .7; }
+  .button_container.active .top {
+    transform: translateY(11px) translateX(0) rotate(45deg);
+    background: #000; }
+  .button_container.active .middle {
+    opacity: 0;
+    background: #000; }
+  .button_container.active .bottom {
+    transform: translateY(-11px) translateX(0) rotate(-45deg);
+    background: #000; }
+  .button_container .--pos {
+    background: #000;
+    border: none;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .35s ease;
+    cursor: pointer; }
+    .button_container .--pos:nth-of-type(2) {
+      top: 11px; }
+    .button_container .--pos:nth-of-type(3) {
+      top: 22px; }
 
 .overlay {
   position: fixed;
@@ -120,173 +101,196 @@ table {
   height: 0%;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.35s, visibility 0.35s, height 0.35s;
-  overflow: hidden;
-}
-.overlay.open {
-  opacity: 0.9;
-  visibility: visible;
-  height: 100%;
-}
-.overlay.open li {
-  animation: fadeInRight 0.5s ease forwards;
-  animation-delay: 0.35s;
-}
-.overlay.open li:nth-of-type(2) {
-  animation-delay: 0.4s;
-}
-.overlay.open li:nth-of-type(3) {
-  animation-delay: 0.45s;
-}
-.overlay.open li:nth-of-type(4) {
-  animation-delay: 0.5s;
-}
-.overlay .--nav {
-  position: relative;
-  height: 70%;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 50px;
-  font-family: "Vollkorn", serif;
-  font-weight: 400;
-  text-align: center;
-}
-.overlay ul {
-  list-style: none;
-  padding: 0;
-  margin: 0 auto;
-  display: inline-block;
-  position: relative;
-  height: 100%;
-}
-.overlay ul li {
-  display: block;
-  height: 25%;
-  height: calc(100% / 4);
-  min-height: 50px;
-  position: relative;
-  opacity: 0;
-}
-.overlay ul li a {
-  display: block;
-  position: relative;
-  color: #000;
-  text-decoration: none;
-  overflow: hidden;
-}
-.overlay ul li a:hover:after, .overlay ul li a:focus:after, .overlay ul li a:active:after {
-  width: 100%;
-}
-.overlay ul li a:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0%;
-  transform: translateX(-50%);
-  height: 3px;
-  background: #000;
-  transition: 0.35s;
-}
+  transition: opacity .35s, visibility .35s, height .35s;
+  overflow: hidden; }
+  .overlay.open {
+    opacity: .9;
+    visibility: visible;
+    height: 100%; }
+    .overlay.open li {
+      animation: fadeInRight .5s ease forwards;
+      animation-delay: .35s; }
+      .overlay.open li:nth-of-type(2) {
+        animation-delay: .4s; }
+      .overlay.open li:nth-of-type(3) {
+        animation-delay: .45s; }
+      .overlay.open li:nth-of-type(4) {
+        animation-delay: .50s; }
+  .overlay .--nav {
+    position: relative;
+    height: 70%;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 50px;
+    font-family: 'Vollkorn', serif;
+    font-weight: 400;
+    text-align: center; }
+  .overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    position: relative;
+    height: 100%; }
+    .overlay ul li {
+      display: block;
+      height: 25%;
+      height: calc(100% / 4);
+      min-height: 50px;
+      position: relative;
+      opacity: 0; }
+      .overlay ul li a {
+        display: block;
+        position: relative;
+        color: #000;
+        text-decoration: none;
+        overflow: hidden; }
+        .overlay ul li a:hover:after, .overlay ul li a:focus:after, .overlay ul li a:active:after {
+          width: 100%; }
+        .overlay ul li a:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          width: 0%;
+          transform: translateX(-50%);
+          height: 3px;
+          background: #000;
+          transition: .35s; }
 
 @keyframes fadeInRight {
   0% {
     opacity: 0;
-    left: 20%;
-  }
+    left: 20%; }
   100% {
     opacity: 1;
-    left: 0;
-  }
-}
-.header-title {
-  font-size: 11rem;
-}
-.header-paragraph {
-  font-size: 1.4rem;
-}
-
-.articles-title {
-  font-size: 8rem;
-}
-
-.partner {
+    left: 0; } }
+.homepage {
+  background-image: url("../styles/img/mook_filter.png");
+  background-repeat: no-repeat;
+  background-position: top right -19rem;
+  background-size: 42rem 59.4rem;
+  margin-left: 3rem;
   display: flex;
-  justify-content: space-around;
-}
-.partner-title {
-  font-size: 8rem;
-}
-.partner-copyrights-paragraph {
-  font-size: 0.9rem;
-}
+  justify-content: center;
+  flex-direction: column;
+  height: 63rem; }
+  @media (min-width: 600px) {
+    .homepage {
+      background-image: url("../styles/img/mook_filter.png");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center center;
+      background-size: 42rem 59.4rem; } }
+  @media (min-width: 1200px) {
+    .homepage {
+      background-color: white; } }
+  .homepage-bar {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: black;
+    height: 0.4rem;
+    width: 77px; }
+  .homepage-title {
+    font-size: 4rem; }
+  .homepage-paragraph {
+    font-size: 1.4rem; }
 
-.tweets-title {
-  font-size: 8rem;
-}
+.about {
+  margin-bottom: 8rem;
+  height: 35rem; }
+  .about-title {
+    margin-left: 3rem;
+    font-size: 2.4rem; }
+  .about-bar {
+    margin-left: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: black;
+    height: 0.4rem;
+    width: 77px; }
+  .about-paragraph {
+    width: 24.9rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1.3rem; }
+    @media (min-width: 600px) {
+      .about-paragraph {
+        width: 35rem; } }
+    .about-paragraph-content {
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.2rem; }
+
+.tweets {
+  height: 35rem;
+  width: 100%; }
+  .tweets-title {
+    margin-left: 3rem;
+    font-size: 2.4rem; }
+  .tweets-bar {
+    margin-left: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: black;
+    height: 0.4rem;
+    width: 77px; }
+  .tweets .partners {
+    background: red;
+    height: 14rem;
+    width: 100%; }
 
 .articles {
   width: 85%;
-  margin: 0 auto;
-}
-.articles-titleContainer {
-  margin: 70px 0 40px 0;
-}
-.articles-mainTitle {
-  font-size: 38px;
-}
-.articles-titleDecor {
-  width: 65px;
-  height: 4px;
-  background-color: black;
-  margin-bottom: 26px;
-}
-.articles-tagContainer {
-  display: flex;
-  flex-wrap: wrap;
-}
-.articles-tagTitles {
-  color: #BEBEBE;
-  font-size: 13px;
-  margin-right: 15px;
-  margin-bottom: 10px;
-  border-radius: 13px;
-  background-color: #EEEEEE;
-  padding: 6px;
-}
-.articles-stroke {
-  width: 100%;
-  height: 1px;
-  background-color: #E3E3E3;
-  margin-bottom: 18px;
-}
-@media (min-width: 600px) {
-  .articles-imgContainer {
-    margin: 0px 0 0 100px;
-  }
-}
-.articles-imgContentcontainer {
-  margin: 0 -15px;
-}
-@media (min-width: 600px) {
+  margin: 0 auto; }
+  .articles-titleContainer {
+    margin: 70px 0 40px 0; }
+  .articles-mainTitle {
+    font-size: 38px; }
+  .articles-titleDecor {
+    width: 65px;
+    height: 4px;
+    background-color: black;
+    margin-bottom: 26px; }
+  .articles-tagContainer {
+    display: flex;
+    flex-wrap: wrap; }
+  .articles-tagTitles {
+    color: #BEBEBE;
+    font-size: 13px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    border-radius: 13px;
+    background-color: #EEEEEE;
+    padding: 6px; }
+  .articles-stroke {
+    width: 100%;
+    height: 1px;
+    background-color: #E3E3E3;
+    margin-bottom: 18px; }
+  @media (min-width: 600px) {
+    .articles-imgContainer {
+      margin: 0px 0 0 100px; } }
   .articles-imgContentcontainer {
-    margin: 0 15px;
-  }
-}
-.articles-contentImg {
-  border-radius: 15px;
-}
+    margin: 0 -15px; }
+    @media (min-width: 600px) {
+      .articles-imgContentcontainer {
+        margin: 0 15px; } }
+  .articles-contentImg {
+    border-radius: 15px; }
+  .articles-imgTitle {
+    position: absolute;
+    z-index: 2; }
+  .articles-imgDesc {
+    position: absolute; }
 
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 body {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-}
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif; }
 
-/*# sourceMappingURL=../css/style.css.map */
+/*# sourceMappingURL=style.css.map */
