--- a/Integration/styles/component/_homepage.scss
+++ b/Integration/styles/component/_homepage.scss
@@ -1,39 +1,92 @@
-.header{
+.homepage{
+  background-image: url('../styles/img/mook_filter.png');
+  background-repeat: no-repeat;
+  background-position: top right -19rem;
+  background-size: 42rem 59.4rem;
+  @include for-size('tablet-portrait-up'){
+    background-image: url('../styles/img/mook_filter.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: 42rem 59.4rem;
+    }
+    @include for-size('desktop-up'){
+      background-color: white;
+      }
+
+  margin-left: 3rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 63rem;
+
+  &-bar{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: black;
+  height: 0.4rem;
+  width: 77px;
+  };
 
   &-title{
-    font-size: 11rem;
-
-  }
+  font-size: 4rem;
+  };
 
   &-paragraph{
-    font-size: 1.4rem;
-  }
-}
+  font-size: 1.4rem;
+  };
+};
 
-.articles{
-
+.about{
+  margin-bottom: 8rem;
+  height: 35rem;
   &-title{
-    font-size: 8rem;
-  }
-}
-
-
-.partner{
-  display: flex;
-  justify-content: space-around;
-
-  &-title{
-    font-size: 8rem;
-  }
-
-  &-copyrights-paragraph{
-    font-size: 0.9rem;
-  }
+  margin-left: 3rem;
+  font-size: 2.4rem;
+  };
+  &-bar{
+    margin-left: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: black;
+    height: 0.4rem;
+    width: 77px;
+  };
+  &-paragraph{
+    width: 24.9rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1.3rem;
+    @include for-size('tablet-portrait-up'){
+      width: 35rem;
+    }
+    &-content{
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.2rem;
+    };
+  };
 }
 
 .tweets{
-
+  height: 35rem;
+  width: 100%;
   &-title{
-    font-size: 8rem;
+    margin-left: 3rem;
+    font-size: 2.4rem;
+  };
+  &-bar{
+    margin-left: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: black;
+    height: 0.4rem;
+    width: 77px;
+  };
+
+  .partners{
+    background: red;
+    height: 14rem;
+    width: 100%;
   }
 }
