--- a/Integration/styles/styles.scss
+++ b/Integration/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './component/nav';
 @import './component/homepage';
 @import './component/articles';
+@import './component/contact';
 
 
 * {
