--- a/Integration/styles/view/articles.html
+++ b/Integration/styles/view/articles.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-  <div class="burgermenuContainer">
+  <div class="menuDesktop">
+    <nav class="navDesktop">
+      <ul class="ulDesktop">
+        <li class="liDesktop"><a href="../../index.html" class="liLinks">Accueil</a></li>
+        <li class="liDesktop"><a href="./articles.html" class="liLinks">Article</a></li>
+        <li class="liDesktop"><a href="" class="liLinks">Top 100</a></li>
+        <li class="liDesktop"><a href="./contact.html" class="liLinks">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="burgermenuContainer --phoneTablet">
     <div class="button_container" id="toggle">
       <span class="top --pos"></span>
       <span class="middle --pos"></span>
@@ -21,10 +32,10 @@
     <div class="overlay" id="overlay">
       <nav class="overlay-menu --nav">
         <ul>
-          <li><a class="container-a" href="#">Accueil</a></li>
-          <li><a class="container-a" href="#">Article</a></li>
+          <li><a class="container-a" href="../../index.html">Accueil</a></li>
+          <li><a class="container-a" href="./articles.html">Article</a></li>
           <li><a class="container-a" href="#">Top 100</a></li>
-          <li><a class="container-a" href="#">Contact</a></li>
+          <li><a class="container-a" href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -48,24 +59,20 @@
     </div>
     <div class="articles-imgContainer">
       <div class="articles-imgContentcontainer">
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg5.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg6.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.svg" alt="img" class="articles-imgContent"></a>
-        <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.svg" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg1.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg2.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg3.png" alt="img" class="articles-imgContent"></a>
+        <a href="#" class="articles-imgLink"><img src="../img/sampleimg4.png" alt="img" class="articles-imgContent"></a>
         <a href="#" class="articles-imgLink"><img src="../img/sampleview.svg" alt="img" class="articles-imgContent"></a>
       </div>
     </div>
   </div>
   <script src="../../index.js"></script>
   <script>
-    $('#toggle').click(function() {
-      $(this).toggleClass('active');
-      $('#overlay').toggleClass('open');
-    });
   </script>
 </body>
 
