--- a/Integration/styles/styles.scss
+++ b/Integration/styles/styles.scss
@@ -9,6 +9,7 @@
 @import './component/homepage';
 @import './component/articles';
 @import './component/contact';
+@import './component/modal';
 
 
 * {
