--- a/Integration/css/style.css
+++ b/Integration/css/style.css
@@ -520,6 +520,82 @@ table {
   margin-bottom: 2%;
 }
 
+@font-face {
+  font-family: "LeagueSpartan-Bold";
+  src: url("../fonts/LeagueSpartan-Bold.otf");
+}
+@font-face {
+  font-family: "Montserrat300";
+  src: url("../fonts/Montserrat300.ttf");
+}
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.modal-overlay {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+.modal-content {
+  width: 80%;
+  height: 600px;
+  margin: 20px auto;
+  background: #fff;
+  border-radius: 8px;
+  padding: 2rem;
+}
+@media (min-width: 600px) {
+  .modal-content {
+    width: 700px;
+  }
+}
+.modal-imgcontent {
+  width: 100%;
+  height: 32%;
+}
+@media (min-width: 600px) {
+  .modal-imgcontent {
+    height: 65%;
+  }
+}
+.modal img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.modal-contentContainer {
+  display: flex;
+}
+@media (min-width: 600px) {
+  .modal-contentContainer {
+    justify-content: space-between;
+    padding: 1rem;
+  }
+}
+.modal-rightContent {
+  width: 70%;
+}
+.modal-para {
+  line-height: 1.2rem;
+  font-size: 0.8rem;
+  font-family: "Montserrat300";
+}
+.modal-title {
+  font-family: "LeagueSpartan-Bold";
+}
+.modal-legend {
+  color: #9C9C9C;
+  font-style: italic;
+}
+
 * {
   box-sizing: border-box;
 }
