--- a/Integration/css/style.css
+++ b/Integration/css/style.css
@@ -165,6 +165,49 @@ table {
   100% {
     opacity: 1;
     left: 0; } }
+.carousel-container {
+  display: none;
+  position: relative; }
+  @media (min-width: 1200px) {
+    .carousel-container {
+      display: block; } }
+
+.carousel {
+  position: absolute;
+  right: 5rem;
+  top: 8rem; }
+
+img {
+  width: 45rem;
+  height: 25rem; }
+
+.carousel img {
+  display: none;
+  transition: all 0.8s; }
+
+.carousel img.is-active {
+  display: block; }
+
+.left {
+  background-color: #F1F1F1;
+  width: 69px;
+  height: 69px;
+  margin: -4.6rem 0 0 6rem;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.right {
+  background-color: #fff;
+  margin: -4.6rem 0 0 10.5rem;
+  position: absolute;
+  width: 69px;
+  height: 69px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .homepage {
   background-image: url("../styles/img/mook_filter.png");
   background-repeat: no-repeat;
@@ -174,7 +217,7 @@ table {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 63rem; }
+  height: 45rem; }
   @media (min-width: 600px) {
     .homepage {
       background-image: url("../styles/img/mook_filter.png");
@@ -184,28 +227,43 @@ table {
       background-size: 42rem 59.4rem; } }
   @media (min-width: 1200px) {
     .homepage {
-      background-color: white; } }
+      background-color: white;
+      background-image: none; } }
+  .homepage-wrapper {
+    height: 20%;
+    width: 40%;
+    z-index: 2; }
+    @media (min-width: 1200px) {
+      .homepage-wrapper {
+        background-color: white; } }
   .homepage-bar {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     background-color: black;
     height: 0.4rem;
     width: 77px; }
   .homepage-title {
-    font-size: 4rem; }
+    font-size: 4rem;
+    z-index: 99; }
   .homepage-paragraph {
     font-size: 1.4rem; }
 
 .about {
   margin-bottom: 8rem;
   height: 35rem; }
+  @media (min-width: 1200px) {
+    .about {
+      background-image: url("../styles/img/mook_filter.png");
+      background-repeat: no-repeat;
+      background-position: top right;
+      background-size: 23rem 31.7rem; } }
   .about-title {
     margin-left: 3rem;
     font-size: 2.4rem; }
   .about-bar {
     margin-left: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     background-color: black;
     height: 0.4rem;
     width: 77px; }
@@ -217,6 +275,11 @@ table {
     @media (min-width: 600px) {
       .about-paragraph {
         width: 35rem; } }
+    @media (min-width: 1200px) {
+      .about-paragraph {
+        margin-left: 7.8rem;
+        margin-right: 0rem;
+        width: 50rem; } }
     .about-paragraph-content {
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
@@ -230,8 +293,8 @@ table {
     font-size: 2.4rem; }
   .tweets-bar {
     margin-left: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     background-color: black;
     height: 0.4rem;
     width: 77px; }
@@ -241,13 +304,13 @@ table {
   height: 14rem;
   width: 100%; }
   .partners-title {
-    padding-top: 2rem;
+    padding-top: 1.6rem;
     display: flex;
     justify-content: center;
     font-size: 2.4rem; }
   .partners-container {
-    margin-bottom: 2.5rem;
-    padding: 0 30rem;
+    margin-bottom: 1.5rem;
+    padding: 0 1rem;
     display: flex;
     justify-content: space-around;
     align-items: center; }
