--- a/Integration/styles/component/_homepage.scss
+++ b/Integration/styles/component/_homepage.scss
@@ -1,3 +1,47 @@
+.carousel-container{
+  display:none;
+  position: relative;
+  @include for-size('desktop-up'){
+  display:block;
+  }
+}
+.carousel{
+  position: absolute;
+  right: 5rem;
+  top:8rem;
+}
+img {
+  width: 45rem;;
+  height: 25rem;;
+}
+.carousel img {
+  display: none;
+  transition: all 0.8s;
+}
+.carousel img.is-active {
+  display: block;
+}
+.left {
+  background-color: #F1F1F1;
+  width: 69px;
+  height: 69px;
+  margin: -4.6rem 0 0 6rem;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right {
+  background-color: #fff;
+  margin: -4.6rem 0 0 10.5rem;
+  position: absolute;
+  width: 69px;
+  height: 69px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .homepage{
   background-image: url('../styles/img/mook_filter.png');
   background-repeat: no-repeat;
@@ -12,17 +56,28 @@
     }
     @include for-size('desktop-up'){
       background-color: white;
-      }
+      background-image:none;
+    }
+
+  &-wrapper{
+    height: 20%;
+    width: 40%;
+    z-index: 2;
+    @include for-size('desktop-up'){
+      background-color: white;
+      
+    }
+  }
 
   margin-left: 3rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 63rem;
+  height: 45rem;
 
   &-bar{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   background-color: black;
   height: 0.4rem;
   width: 77px;
@@ -30,6 +85,7 @@
 
   &-title{
   font-size: 4rem;
+  z-index: 99;
   };
 
   &-paragraph{
@@ -40,14 +96,20 @@
 .about{
   margin-bottom: 8rem;
   height: 35rem;
+  @include for-size('desktop-up'){
+    background-image: url('../styles/img/mook_filter.png');
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 23rem 31.7rem;
+    }
   &-title{
   margin-left: 3rem;
   font-size: 2.4rem;
   };
   &-bar{
     margin-left: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     background-color: black;
     height: 0.4rem;
     width: 77px;
@@ -59,6 +121,11 @@
     padding-top: 1.3rem;
     @include for-size('tablet-portrait-up'){
       width: 35rem;
+    }
+    @include for-size('desktop-up'){
+      margin-left: 7.8rem;
+      margin-right: 0rem;
+      width: 50rem;
     }
     &-content{
       margin-top: 1.5rem;
@@ -77,8 +144,8 @@
   };
   &-bar{
     margin-left: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     background-color: black;
     height: 0.4rem;
     width: 77px;
@@ -90,14 +157,14 @@
   height: 14rem;
   width: 100%;
   &-title{
-    padding-top: 2rem;
+    padding-top: 1.6rem;
     display: flex;
     justify-content: center;
     font-size: 2.4rem;
   }
   &-container{
-    margin-bottom: 2.5rem;
-    padding: 0 30rem;
+    margin-bottom: 1.5rem;
+    padding: 0 1rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
