--- a/Integration/styles/component/_contact.scss
+++ b/Integration/styles/component/_contact.scss
@@ -40,8 +40,8 @@
   }
   &-form{
     background-color: black;
-    padding: 1.7rem 2rem;
-    border-radius: 5px;
+    padding: 33px 25px;
+    border-radius: 70px;
     @include for-size ('tablet-portrait-up'){
     width: 50%;
     height:70%;
