--- a/Integration/styles/component/_homepage.scss
+++ b/Integration/styles/component/_homepage.scss
@@ -8,11 +8,11 @@
 .carousel{
   position: absolute;
   right: 5rem;
-  top:8rem;
+  top:12rem;
 }
 img {
-  width: 45rem;;
-  height: 25rem;;
+  width: 45rem;
+  height: 25rem;
 }
 .carousel img {
   display: none;
@@ -61,11 +61,10 @@ img {
 
   &-wrapper{
     height: 20%;
-    width: 40%;
+    width: 38%;
     z-index: 2;
     @include for-size('desktop-up'){
-      background-color: white;
-      
+      background-color: rgba(255, 255, 255, 0.5);
     }
   }
 
